DPR2-300 rename service for consistency across

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ info.app:
 
 spring:
   application:
-    name: hmpps-dpr-dpds-service
+    name: digital-prison-reporting-data-product-definitions
   codec:
     max-in-memory-size: 50MB
 
