DPR2-300 fix wrong namespace secret

--- a/helm_deploy/digital-prison-reporting-data-product-definitions/values.yaml
+++ b/helm_deploy/digital-prison-reporting-data-product-definitions/values.yaml
@@ -27,11 +27,11 @@ generic-service:
   #     [name of environment variable as seen by app]: [key of kubernetes secret to load]
 
   namespace_secrets:
-    hmpps-dpr-tools-api:
+    digital-prison-reporting-data-product-definitions:
       APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
-    hmpps-auth:
-      SYSTEM_CLIENT_ID: "system_client_id"
-      SYSTEM_CLIENT_SECRET: "system_client_secret"
+#    hmpps-auth:
+#      SYSTEM_CLIENT_ID: "system_client_id"
+#      SYSTEM_CLIENT_SECRET: "system_client_secret"
 
   allowlist:
     cloudplatform-live1-1: 35.178.209.113/32
