--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 orbs:
   hmpps: ministryofjustice/hmpps@7
   slack: circleci/slack@4.12.1
+  mem: circleci/rememborb@0.0.2
 
 parameters:
   alerts-slack-channel:
@@ -34,6 +35,15 @@ jobs:
       - store_artifacts:
           path: build/reports/tests
 
+  remember-app-version:
+    executor:
+      name: hmpps/node
+      tag: << pipeline.parameters.node-version >>
+    steps:
+      - mem/remember:
+          env_var: APP_VERSION
+          value: "Build.${CIRCLE_WORKFLOW_ID}"
+
 workflows:
   version: 2
   build-test-and-deploy:
@@ -46,10 +56,15 @@ workflows:
           name: helm_lint
       - hmpps/build_multiplatform_docker:
           name: build_docker
+          additional_docker_build_args: --tag "quay.io/hmpps/${CIRCLE_PROJECT_REPONAME}:Build.${CIRCLE_WORKFLOW_ID}"
           filters:
             branches:
               only:
                 - main
+      - remember-app-version:
+          name: remember-version-for-dev
+          requires:
+            - build_docker
       - hmpps/deploy_env:
           name: deploy_dev
           env: "dev"
@@ -64,13 +79,17 @@ workflows:
                 - main
           requires:
             - validate
-            - build_docker
+            - remember-version-for-dev
             - helm_lint
           helm_timeout: 5m
       - request-test-approval:
           type: approval
           requires:
             - deploy_dev
+      - remember-app-version:
+          name: remember-version-for-test
+          requires:
+            - request-test-approval
       - hmpps/deploy_env:
           name: deploy_test
           env: "test"
@@ -84,12 +103,17 @@ workflows:
               only:
                 - main
           requires:
-            - request-test-approval
+            - remember-version-for-test
           helm_timeout: 5m
       - request-preprod-approval:
           type: approval
           requires:
             - deploy_dev
+
+      - remember-app-version:
+          name: remember-version-for-preprod
+          requires:
+            - request-preprod-approval
       - hmpps/deploy_env:
           name: deploy_preprod
           env: "preprod"
@@ -100,12 +124,16 @@ workflows:
             - hmpps-common-vars
             - hmpps-digital-prison-reporting-mi-preprod
           requires:
-            - request-preprod-approval
+            - remember-version-for-preprod
           helm_timeout: 5m
       - request-prod-approval:
           type: approval
           requires:
             - deploy_preprod
+      - remember-app-version:
+          name: remember-version-for-prod
+          requires:
+            - request-prod-approval
       - hmpps/deploy_env:
           name: deploy_prod
           env: "prod"
@@ -118,7 +146,7 @@ workflows:
             - hmpps-common-vars
             - hmpps-digital-prison-reporting-mi-prod
           requires:
-            - request-prod-approval
+            - remember-version-for-prod
           helm_timeout: 5m
 
   security:
