[DPR-421] Allow re-run of failed deployments

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       - mem/remember:
           env_var: APP_VERSION
-          value: "Build.${CIRCLE_WORKFLOW_ID}"
+          value: "Build.${CIRCLE_SHA1}"
 
 workflows:
   version: 2
@@ -56,7 +56,7 @@ workflows:
           name: helm_lint
       - hmpps/build_multiplatform_docker:
           name: build_docker
-          additional_docker_build_args: --tag "quay.io/hmpps/${CIRCLE_PROJECT_REPONAME}:Build.${CIRCLE_WORKFLOW_ID}"
+          additional_docker_build_args: --tag "quay.io/hmpps/${CIRCLE_PROJECT_REPONAME}:Build.${CIRCLE_SHA1}"
           filters:
             branches:
               only:
