--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,56 +61,54 @@ workflows:
             branches:
               only:
                 - main
-                - /hotfix\/.+/
-      #      - remember-app-version:
-      #          name: remember-version-for-dev
-      #          requires:
-      #            - build_docker
-      #      - hmpps/deploy_env:
-      #          name: deploy_dev
-      #          env: "dev"
-      #          jira_update: true
-      #          release_name: PROJECT_NAME_ENV_NAME
-      #          context:
-      #            - hmpps-common-vars
-      #            - hmpps-digital-prison-reporting-mi-dev
-      #          filters:
-      #            branches:
-      #              only:
-      #                - main
-      #                - /hotfix\/.+/
-      #          requires:
-      #            - validate
-      #            - remember-version-for-dev
-      #            - helm_lint
-      #          helm_timeout: 5m
-      #      - request-test-approval:
-      #          type: approval
-      #          requires:
-      #            - deploy_dev
-      #      - remember-app-version:
-      #          name: remember-version-for-test
-      #          requires:
-      #            - request-test-approval
-      #      - hmpps/deploy_env:
-      #          name: deploy_test
-      #          env: "test"
-      #          jira_update: true
-      #          release_name: PROJECT_NAME_ENV_NAME
-      #          context:
-      #            - hmpps-common-vars
-      #            - hmpps-digital-prison-reporting-mi-test
-      #          filters:
-      #            branches:
-      #              only:
-      #                - main
-      #          requires:
-      #            - remember-version-for-test
-      #          helm_timeout: 5m
+      - remember-app-version:
+          name: remember-version-for-dev
+          requires:
+            - build_docker
+      - hmpps/deploy_env:
+          name: deploy_dev
+          env: "dev"
+          jira_update: true
+          release_name: PROJECT_NAME_ENV_NAME
+          context:
+            - hmpps-common-vars
+            - hmpps-digital-prison-reporting-mi-dev
+          filters:
+            branches:
+              only:
+                - main
+          requires:
+            - validate
+            - remember-version-for-dev
+            - helm_lint
+          helm_timeout: 5m
+      - request-test-approval:
+          type: approval
+          requires:
+            - deploy_dev
+      - remember-app-version:
+          name: remember-version-for-test
+          requires:
+            - request-test-approval
+      - hmpps/deploy_env:
+          name: deploy_test
+          env: "test"
+          jira_update: true
+          release_name: PROJECT_NAME_ENV_NAME
+          context:
+            - hmpps-common-vars
+            - hmpps-digital-prison-reporting-mi-test
+          filters:
+            branches:
+              only:
+                - main
+          requires:
+            - remember-version-for-test
+          helm_timeout: 5m
       - request-preprod-approval:
           type: approval
           requires:
-            - build_docker
+            - deploy_dev
 
       - remember-app-version:
           name: remember-version-for-preprod
