DPR2-907C Minor tweaks

--- a/src/main/resources/definitions/prisons/steel-thread/ors-approved-visitors-list-for-a-prisoner.json
+++ b/src/main/resources/definitions/prisons/steel-thread/ors-approved-visitors-list-for-a-prisoner.json
@@ -4,7 +4,12 @@
   "description": "VIS0024 v00.00.01 Last Modified: 20/03/2019\nThis report provides a list of Approved Visitors for a Prisoner.",
   "metadata": {
     "version": "1.0.0",
-    "tags": ["VIS0024", "Approved", "Visitors", ""]
+    "tags": [
+      "VIS0024",
+      "Approved",
+      "Visitors",
+      ""
+    ]
   },
   "datasource": [
     {
@@ -93,7 +98,10 @@
           "effect": "permit",
           "condition": [
             {
-              "match": ["${role}", "ROLE_PRISONS_REPORTING_USER"]
+              "match": [
+                "${role}",
+                "ROLE_PRISONS_REPORTING_USER"
+              ]
             }
           ]
         }
