--- a/src/main/resources/definitions/prisons/steel-thread/ors-summary-of-releases-and-taps.json
+++ b/src/main/resources/definitions/prisons/steel-thread/ors-summary-of-releases-and-taps.json
@@ -4,7 +4,9 @@
   "description": "MOV0041 - v00.00.01 Last Modified: 05/08/16\nThis report shows the number of Releases and Temporary Absences in between two dates, specified at run time.",
   "metadata": {
     "version": "1.0.0",
-    "tags": ["MOV0041  v00.00.01 DPR"]
+    "tags": [
+      "MOV0041  v00.00.01 DPR"
+    ]
   },
   "datasource": [
     {
@@ -113,12 +115,17 @@
           "effect": "permit",
           "condition": [
             {
-              "match": ["${role}", "ROLE_PRISONS_REPORTING_USER"]
+              "match": [
+                "${role}",
+                "ROLE_PRISONS_REPORTING_USER"
+              ]
             }
           ]
         }
       ]
     }
   ],
-  "report": []
+  "report": [
+
+  ]
 }
