--- a/src/main/resources/definitions/prisons/steel-thread/ors-approved-visitors-list-for-a-prisoner.json
+++ b/src/main/resources/definitions/prisons/steel-thread/ors-approved-visitors-list-for-a-prisoner.json
@@ -123,15 +123,15 @@
         "field": [
           {
             "name": "$ref:CP_FIRST_NAME",
-            "display": "CP First Name",
+            "display": "Contact First Name",
             "formula": "",
             "visible": "true",
             "sortable": true,
-            "defaultsort": false
+            "defaultsort": true
           },
           {
             "name": "$ref:CP_LAST_NAME",
-            "display": "CP Last Name",
+            "display": "Contact Last Name",
             "formula": "",
             "visible": "true",
             "sortable": true,
