--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -23,3 +23,7 @@ jobs:
           # This part is also where you can pass other options, for example:
           prettier_options: --write **/*.{js,md,json}
           only_changed: True
+      - name: Commit prettier fixes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Prettier fixes
