--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -34,6 +34,10 @@ jobs:
         with:
           commit_message: Linting fixes
 
+      - uses: ministryofjustice/github-actions/code-formatter@v14
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Calculate test coverage
         id: calculate-test-coverage
         run: |
