--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,10 @@ workflows:
       - hmpps/build_multiplatform_docker:
           name: build_docker
           additional_docker_build_args: --tag "quay.io/hmpps/${CIRCLE_PROJECT_REPONAME}:Build.${CIRCLE_SHA1}"
+          filters:
+            branches:
+              only:
+                - main
       - remember-app-version:
           name: remember-version-for-dev
           requires:
