[DPR2-1068] Approved Visitor list header summary

--- a/src/main/resources/definitions/prisons/steel-thread/ors-approved-visitors-list-for-a-prisoner.json
+++ b/src/main/resources/definitions/prisons/steel-thread/ors-approved-visitors-list-for-a-prisoner.json
@@ -92,6 +92,36 @@
           }
         ]
       }
+    },
+    {
+      "id": "prisoner-summary",
+      "name": "Prisoner Summary",
+      "datasource": "redshift",
+      "query": "SELECT DISTINCT OFFENDER_ID_DISPLAY, LAST_NAME, FIRST_NAME, LOCATION FROM (SELECT *, AGY_LOC_ID || '-' || UNIT_DESCRIPTION_4_SHORT AS LOCATION FROM ${tableId})",
+      "schema": {
+        "field": [
+          {
+            "name": "OFFENDER_ID_DISPLAY",
+            "type": "string",
+            "display": "NOMS Number"
+          },
+          {
+            "name": "LAST_NAME",
+            "type": "string",
+            "display": "Last Name"
+          },
+          {
+            "name": "FIRST_NAME",
+            "type": "string",
+            "display": "First Name"
+          },
+          {
+            "name": "LOCATION",
+            "type": "string",
+            "display": "Location"
+          }
+        ]
+      }
     }
   ],
   "policy": [
@@ -118,6 +148,13 @@
       "version": "1.0.0",
       "render": "HTML",
       "dataset": "3376551/DP11",
+      "summary": [
+        {
+          "id": "prisoner-summary",
+          "template": "page-header",
+          "dataset": "$ref:prisoner-summary"
+        }
+      ],
       "specification": {
         "template": "list",
         "field": [
