[DPR2-1104] Description fixes

--- a/src/main/resources/definitions/prisons/steel-thread/ors-summary-of-releases-and-taps.json
+++ b/src/main/resources/definitions/prisons/steel-thread/ors-summary-of-releases-and-taps.json
@@ -1,7 +1,7 @@
 {
   "id": "klekjOAAAyY5a9ABUf8AISgXYiw",
   "name": "ORS Summary of Releases and TAPS ",
-  "description": "MOV0041 - v00.00.01 Last Modified: 05/08/16\nThis report shows the number of Releases and Temporary Absences in between two dates, specified at run time.",
+  "description": "The number of Releases and Temporary Absences in between two dates, specified at run time.\nMOV0041 - v00.00.01 Last Modified: 05/08/16",
   "metadata": {
     "version": "1.0.0",
     "tags": ["MOV0041  v00.00.01 DPR"]
