--- a/src/main/resources/definitions/prisons/steel-thread/ors-approved-visitors-list-for-a-prisoner.json
+++ b/src/main/resources/definitions/prisons/steel-thread/ors-approved-visitors-list-for-a-prisoner.json
@@ -1,7 +1,7 @@
 {
   "id": "Fid1glymeAcAeDwAAHCbuV8NACJIABRd",
   "name": "ORS Approved Visitors List for a Prisoner",
-  "description": "VIS0024 v00.00.01 Last Modified: 20/03/2019\nThis report provides a list of Approved Visitors for a Prisoner.",
+  "description": "A list of Approved Visitors for a Prisoner.\nVIS0024 v00.00.01 Last Modified: 20/03/2019",
   "metadata": {
     "version": "1.0.0",
     "tags": ["VIS0024", "Approved", "Visitors", ""]
