--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -6,6 +6,7 @@ generic-service:
     host: hmpps-dpr-data-product-definitions.hmpps.service.justice.gov.uk
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
+    ENV_NAME: prod
 
 # CloudPlatform AlertManager receiver to route prometheus alerts to slack
 # See https://user-guide.cloud-platform.service.justice.gov.uk/documentation/monitoring-an-app/how-to-create-alarms.html#creating-your-own-custom-alerts
