--- a/helm_deploy/values-test.yaml
+++ b/helm_deploy/values-test.yaml
@@ -6,7 +6,7 @@ generic-service:
 
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.dev.json
-    ENV_NAME: test
+    ENVIRONMENT: test
 
   allowlist:
     groups:
