--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -34,10 +34,11 @@ jobs:
         with:
           commit_message: Linting fixes
 
-      - uses: ministryofjustice/github-actions/code-formatter@v14
+      - uses: ministryofjustice/github-actions/code-formatter@v18
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Calculate test coverage
       - name: Calculate test coverage
         id: calculate-test-coverage
         run: |
