--- a/helm_deploy/hmpps-dpr-data-product-definitions/values.yaml
+++ b/helm_deploy/hmpps-dpr-data-product-definitions/values.yaml
@@ -28,9 +28,9 @@ generic-service:
   namespace_secrets:
     hmpps-dpr-data-product-definitions:
       APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
-  #    hmpps-auth:
-  #      SYSTEM_CLIENT_ID: "system_client_id"
-  #      SYSTEM_CLIENT_SECRET: "system_client_secret"
+    hmpps-auth:
+      SYSTEM_CLIENT_ID: "system_client_id"
+      SYSTEM_CLIENT_SECRET: "system_client_secret"
 
   allowlist:
     cloudplatform-live1-1: 35.178.209.113/32
