--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,12 @@ spring:
       test:
         - "stdout"
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: ${hmpps.auth.url}/.well-known/jwks.json
+
 server:
   port: 9120
   servlet:
@@ -49,3 +55,7 @@ management:
     info:
       cache:
         time-to-live: 2000ms
+
+dpr:
+  user:
+    role: ROLE_PRISONS_REPORTING_USER
