--- a/helm_deploy/values-test.yaml
+++ b/helm_deploy/values-test.yaml
@@ -7,6 +7,7 @@ generic-service:
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.dev.json
     ENVIRONMENT: test
+    HMPPS_AUTH_URL: https://sign-in-dev.hmpps.service.justice.gov.uk/auth
 
   allowlist:
     groups:
