[DPR2-1514] Fix PoC version of GitHub publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,8 @@ permissions:
   contents: read  # This is required for actions/checkout
 
 jobs:
-  publish-package:
+  publish-dpds:
+    name: Publish DPDs to ${{ inputs.deployEnv }} env
     environment: ${{ inputs.deployEnv }}
     runs-on: ubuntu-latest
 
