--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,26 @@ jobs:
           aws-region: "eu-west-2"
 
       - name: Publish to DynamoDB
+        shell: bash
         run: |
-          aws dynamodb put-item \
-            --table-name dpr-data-product-definition \
-            --item "{ \"data-product-id\": { \"S\": \"deploy-test\" }, \"category\": { \"S\": \"definitions/test\" }, \"definition\": { \"S\": \"{ \\\"id\\\": \\\"deploy-test\\\" }\" }, \"filename\": { \"S\": \"deploy-test.json\" } }"
+          DPD_FOLDER="$GITHUB_WORKSPACE/src/main/resources/${{ inputs.deployEnv }}/"
+          DPDs=($(find $DPD_FOLDER -name "*.json"))
+          
+          for FILE_PATH in "${DPDs[@]}"
+          do
+            FILENAME=$(basename $FILE_PATH)
+            DPD_PATH=${FILE_PATH/$DPD_FOLDER\//}
+            DPD_PATH=${DPD_PATH/\/$FILENAME/}
+            DPD_ID=$(jq -r '.id' $FILE_PATH)
+          
+            echo "Path: $DPD_PATH File: $FILENAME ID: $DPD_ID"
+          
+            JSON_TEXT=$(jq -Rsc <$FILE_PATH)
+            JSON_TEXT=$(echo $JSON_TEXT | sed 's/^"//')
+            JSON_TEXT=$(echo $JSON_TEXT | sed 's/"$//')
+          
+            aws dynamodb put-item \
+              --table-name dpr-data-product-definition \
+              --item "{ \"data-product-id\": { \"S\": \"$DPD_ID\" }, \"category\": { \"S\": \"$DPD_PATH\" }, \"definition\": { \"S\": \"$JSON_TEXT\" }, \"filename\": { \"S\": \"$FILENAME\" } }"
+            
+          done
