--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,8 @@ jobs:
         shell: bash
         run: |
           DPD_FOLDER="$GITHUB_WORKSPACE/src/main/resources/${{ inputs.deployEnv }}/"
+          echo "Searching folder: $DPD_FOLDER"
+         
           DPDs=($(find $DPD_FOLDER -name "*.json"))
           
           for FILE_PATH in "${DPDs[@]}"
