--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
           for FILE_PATH in "${DPDs[@]}"
           do
             FILENAME=$(basename $FILE_PATH)
-            DPD_PATH=${FILE_PATH/$DPD_FOLDER\//}
+            DPD_PATH=${FILE_PATH/$DPD_FOLDER/}
             DPD_PATH=${DPD_PATH/\/$FILENAME/}
             DPD_ID=$(jq -r '.id' $FILE_PATH)
           
