--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,6 +42,8 @@ jobs:
          
           DPDs=($(find $DPD_FOLDER -name "*.json"))
           
+          mkdir $GITHUB_WORKSPACE/temp
+          
           for FILE_PATH in "${DPDs[@]}"
           do
             FILENAME=$(basename $FILE_PATH)
@@ -54,9 +56,11 @@ jobs:
             JSON_TEXT=$(jq -Rsc <$FILE_PATH)
             JSON_TEXT=$(echo $JSON_TEXT | sed 's/^"//')
             JSON_TEXT=$(echo $JSON_TEXT | sed 's/"$//')
+
+            echo "{ \"data-product-id\": { \"S\": \"$DPD_ID\" }, \"category\": { \"S\": \"$DPD_PATH\" }, \"definition\": { \"S\": \"$JSON_TEXT\" }, \"filename\": { \"S\": \"$FILENAME\" } }" > $GITHUB_WORKSPACE/temp/$DPD_ID.json
           
             aws dynamodb put-item \
               --table-name dpr-data-product-definition \
-              --item "{ \"data-product-id\": { \"S\": \"$DPD_ID\" }, \"category\": { \"S\": \"$DPD_PATH\" }, \"definition\": { \"S\": \"$JSON_TEXT\" }, \"filename\": { \"S\": \"$FILENAME\" } }"
+              --item file://$GITHUB_WORKSPACE/temp/$DPD_ID.json
             
           done
