[DPR2-1514] Work around arg size limit

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,5 +62,7 @@ jobs:
             aws dynamodb put-item \
               --table-name dpr-data-product-definition \
               --item file://$GITHUB_WORKSPACE/temp/$DPD_ID.json
+          
+            rm -f file://$GITHUB_WORKSPACE/temp/$DPD_ID.json
             
           done
