--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -47,5 +47,5 @@ jobs:
       - name: PR comment
         uses: thollander/actions-comment-pull-request@v3
         with:
-          comment_tag: coverage
-          filePath: message.txt
+          comment-tag: coverage
+          file-path: message.txt
