--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -34,11 +34,10 @@ jobs:
         with:
           commit_message: Linting fixes
 
-      - uses: ministryofjustice/github-actions/code-formatter@v18
+      - uses: ministryofjustice/github-actions/code-formatter@v18.5.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Calculate test coverage
       - name: Calculate test coverage
         id: calculate-test-coverage
         run: |
@@ -48,5 +47,5 @@ jobs:
       - name: PR comment
         uses: thollander/actions-comment-pull-request@v3
         with:
-          comment_tag: coverage
-          filePath: message.txt
+          comment-tag: coverage
+          file-path: message.txt
