--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -34,9 +34,9 @@ jobs:
         with:
           commit_message: Linting fixes
 
-      - uses: ministryofjustice/github-actions/code-formatter@v18.5.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #- uses: ministryofjustice/github-actions/code-formatter@v18.5.0
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Calculate test coverage
         id: calculate-test-coverage
