[DPR2-1514] Auto-deploy to dev, and fix access policies

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,9 @@ on:
           - test
           - preprod
           - prod
+  pull_request:
+    types:
+      - closed
 
 permissions:
   id-token: write  # This is required for requesting the JWT
@@ -20,8 +23,8 @@ permissions:
 
 jobs:
   publish-dpds:
-    name: Publish DPDs to ${{ inputs.deployEnv }} env
-    environment: ${{ inputs.deployEnv }}
+    name: Publish DPDs to ${{ inputs.deployEnv || 'dev' }} env
+    environment: ${{ inputs.deployEnv || 'dev' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -37,7 +40,7 @@ jobs:
       - name: Publish to DynamoDB
         shell: bash
         run: |
-          DPD_FOLDER="$GITHUB_WORKSPACE/src/main/resources/${{ inputs.deployEnv }}/"
+          DPD_FOLDER="$GITHUB_WORKSPACE/src/main/resources/${{ inputs.deployEnv || 'dev' }}/"
           echo "Searching folder: $DPD_FOLDER"
          
           DPDs=($(find $DPD_FOLDER -name "*.json"))
