[DPR2-1514] Deploy specified subfolder

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,11 @@ on:
           - test
           - preprod
           - prod
+      deployFolder:
+        description: 'The subfolder to deploy (e.g. dps/activities)'
+        required: true
+        default: orphanage
+        type: text
   pull_request:
     types:
       - closed
@@ -40,7 +45,7 @@ jobs:
       - name: Publish to DynamoDB
         shell: bash
         run: |
-          DPD_FOLDER="$GITHUB_WORKSPACE/src/main/resources/${{ inputs.deployEnv || 'dev' }}/"
+          DPD_FOLDER="$GITHUB_WORKSPACE/src/main/resources/${{ inputs.deployEnv || 'dev' }}/definitions/prisons/${{ inputs.deployFolder || 'orphanage' }}/"
           echo "Searching folder: $DPD_FOLDER"
          
           DPDs=($(find $DPD_FOLDER -name "*.json"))
