--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,8 +62,9 @@ jobs:
             echo "File: $FILENAME ID: $DPD_ID"
           
             JSON_TEXT=$(jq -Rsc <$FILE_PATH)
-            JSON_TEXT=$(echo $JSON_TEXT | sed 's/^"//')
-            JSON_TEXT=$(echo $JSON_TEXT | sed 's/"$//')
+            JSON_TEXT=$(echo "$JSON_TEXT" | sed 's/\/\*[^*]+\*\///')
+            JSON_TEXT=$(echo "$JSON_TEXT" | sed 's/^"//')
+            JSON_TEXT=$(echo "$JSON_TEXT" | sed 's/"$//')
 
             echo "{ \"data-product-id\": { \"S\": \"$DPD_ID\" }, \"category\": { \"S\": \"$DPD_PATH\" }, \"definition\": { \"S\": \"$JSON_TEXT\" }, \"filename\": { \"S\": \"$FILENAME\" } }" > $GITHUB_WORKSPACE/temp/$DPD_ID.json
           
