[DPR2-1531] CI pipelines

--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -12,7 +12,7 @@ jobs:
   verify-json-validation:
     runs-on: ubuntu-latest
     env:
-      SCHEMA_LOCATION: "${{ env.GITHUB_WORKSPACE }}/schema.json"
+      SCHEMA_LOCATION: "${{ github.workspace }}/schema.json"
     steps:
       - uses: actions/checkout@v4
 
