[DPR2-1531] CI pipelines

--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -23,7 +23,7 @@ jobs:
         id: validate-json
         uses: ammarlakis/action-ajv@master
         with:
-          schema: {{ env.SCHEMA_LOCATION }}
+          schema: ${{ env.SCHEMA_LOCATION }}
           data: "${{ env.GITHUB_WORKSPACE }}/dpd/**/*.json"
           allErrors: true
 
