[DPR2-1531] CI pipelines

--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -24,7 +24,7 @@ jobs:
         uses: ammarlakis/action-ajv@master
         with:
           schema: ${{ env.SCHEMA_LOCATION }}
-          data: "${{ env.GITHUB_WORKSPACE }}/dpd/**/*.json"
+          data: "${{ env.GITHUB_WORKSPACE }}/src/main/resources/**/*.json"
           allErrors: true
 
       - name: Fail if invalid files found
