--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -6,13 +6,28 @@ on:
       - opened
       - synchronize
 
-
-
 jobs:
+  list-dpds:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: List DPDs
+        run: |
+          DPDS=$(ls -m ./src/main/resources/**/*.json | sed 's/, /",/g' | tr '\n' '"')
+          echo 'dpds=[$DPDS]' >> "$GITHUB_OUTPUT"
+
   verify-json-validation:
     runs-on: ubuntu-latest
+    needs: list-dpds
+
+    strategy:
+      matrix:
+        dpd: ${{ fromJSON(needs.list-dpds.outputs.dpds) }}
     env:
       SCHEMA_LOCATION: "${{ github.workspace }}/schema.json"
+
     steps:
       - uses: actions/checkout@v4
 
@@ -24,7 +39,7 @@ jobs:
         uses: ammarlakis/action-ajv@master
         with:
           schema: ${{ env.SCHEMA_LOCATION }}
-          data: "${{ github.workspace }}/src/main/resources/**/*.json"
+          data: ${{ matrix.dpd }}
           allErrors: true
 
       - name: Fail if invalid files found
