--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -16,6 +16,7 @@ jobs:
       - name: List DPDs
         run: |
           DPDS=$(ls -m ./src/main/resources/**/*.json | sed 's/, /",/g' | tr '\n' '"')
+          echo 'dpds=[$DPDS]'
           echo 'dpds=[$DPDS]' >> "$GITHUB_OUTPUT"
 
   verify-json-validation:
