[DPR2-1531] CI pipelines

--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: List DPDs
         run: |
-          DPDS=$(ls -m ./src/main/resources/**/*.json | sed 's/, /",/g' | tr '\n' '"')
+          DPDS=$(ls -m ${{ github.workspace }}/src/main/resources/**/*.json | sed 's/, /",/g' | tr '\n' '"')
           echo 'dpds=[$DPDS]'
           echo 'dpds=[$DPDS]' >> "$GITHUB_OUTPUT"
 
