[DPR2-1531] CI pipelines

--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -23,9 +23,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: list-dpds
 
-    strategy:
-      matrix:
-        dpd: ${{ fromJSON(needs.list-dpds.outputs.dpds) }}
     env:
       SCHEMA_LOCATION: "${{ github.workspace }}/schema.json"
 
@@ -42,6 +39,7 @@ jobs:
           schema: ${{ env.SCHEMA_LOCATION }}
           data: ${{ matrix.dpd }}
           allErrors: true
+          verbose: true
 
       - name: Fail if invalid files found
         if: ${{ steps.validate-json.outputs.valid }}
