[DPR2-1531] CI pipelines

--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -37,7 +37,7 @@ jobs:
         uses: ammarlakis/action-ajv@master
         with:
           schema: ${{ env.SCHEMA_LOCATION }}
-          data: ${{ matrix.dpd }}
+          data: "${{ github.workspace }}/src/main/resources/**/*.json"
           allErrors: true
           verbose: true
 
