[DPR2-1531] CI pipelines

--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -7,19 +7,7 @@ on:
       - synchronize
 
 jobs:
-  list-dpds:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: List DPDs
-        run: |
-          DPDS=$(ls -m ${{ github.workspace }}/src/main/resources/**/*.json | sed 's/, /",/g' | tr '\n' '"')
-          echo 'dpds=[$DPDS]'
-          echo 'dpds=[$DPDS]' >> "$GITHUB_OUTPUT"
-
-  verify-json-validation:
+  json-validation:
     runs-on: ubuntu-latest
     needs: list-dpds
 
@@ -40,9 +28,3 @@ jobs:
           data: "${{ github.workspace }}/src/main/resources/**/*.json"
           allErrors: true
           verbose: true
-
-      - name: Fail if invalid files found
-        if: ${{ steps.validate-json.outputs.valid }}
-        run: |
-          echo "${{ steps.validate-json.outputs.valid }}"
-          if [[ ${{ steps.validate-json.outputs.valid }} ]]; then exit 0; else exit 1; fi
