DPR2-1703 update case for scheduled

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -86,9 +86,10 @@ jobs:
             DPD_ID=$(jq -r '.id' $FILE_PATH)
             SCHEDULED=$(jq -r '.scheduled //false' $FILE_PATH)
            
-            echo "File: $FILENAME ID: $DPD_ID SCHEDULED: $SCHEDULED"
+            echo "File: $FILENAME ID: $DPD_ID scheduled: $SCHEDULED"
           
             JSON_TEXT=$(jq -Rsc <$FILE_PATH)
+          
             JSON_TEXT=$(echo "$JSON_TEXT" | sed 's/\/\*[^*]+\*\///')
             JSON_TEXT=$(echo "$JSON_TEXT" | sed 's/^"//')
             JSON_TEXT=$(echo "$JSON_TEXT" | sed 's/"$//')
