--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -5,6 +5,8 @@ on:
     types:
       - opened
       - synchronize
+    paths-ignore:
+      - "${{ github.workspace }}/dpd/**/missing/*"
 
 jobs:
   json-validation:
