check variantid uniqueness, make two unique just to check script works

--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -26,3 +26,7 @@ jobs:
           schema: ${{ env.SCHEMA_LOCATION }}
           data: "${{ github.workspace }}/dpd/**/*.json"
           allErrors: true
+
+      - name: Ensure variant uniqueness within DPDs
+        id: ensure-uniqueness
+        run: node ensureUniqueness.js
