--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -29,4 +29,4 @@ jobs:
 
       - name: Ensure variant uniqueness within DPDs
         id: ensure-uniqueness
-        run: node ensureUniqueness.js
+        run: node scripts/ensureUniqueness.js
