--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -27,6 +27,10 @@ jobs:
           data: "${{ github.workspace }}/dpd/**/*.json"
           allErrors: true
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "24.x"
+
       - name: Ensure variant uniqueness within DPDs
         id: ensure-uniqueness
         run: node scripts/ensureUniqueness.js
