--- a/.github/workflows/pr-raised.yml
+++ b/.github/workflows/pr-raised.yml
@@ -26,3 +26,11 @@ jobs:
           schema: ${{ env.SCHEMA_LOCATION }}
           data: "${{ github.workspace }}/dpd/**/*.json"
           allErrors: true
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "24.x"
+
+      - name: Ensure variant uniqueness within DPDs
+        id: ensure-uniqueness
+        run: node scripts/ensureUniqueness.js
